--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "General";
+  src: url("https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&f");
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
